Criação de estrutura básica das sections

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
-                        <li><a href="">About Us</a></li>
+                        <li><a href="#about-us">About Us</a></li>
                         <li><a href="">Services</a></li>
                         <li><a href="">Our Projects</a></li>
                         <li><a href="">Our Team</a></li>
@@ -55,6 +55,20 @@
                 <div class="pointer"></div>
                 <div class="pointer"></div>
             </div>
+        </section>
+        <section class="default light" id="about-us">
+            <div class="section-title">About us</div>
+            <div class="section-desc">Who we are?</div>
+            <div class="section-body">
+                ...
+            </div>            
+        </section>
+        <section class="default dark" id="">
+            <div class="section-title">Título</div>
+            <div class="section-desc">Descrição</div>
+            <div class="section-body">
+                ...
+            </div>            
         </section>
     </main>
     <footer>
