Construção section About Us

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                     <div class="slidearea">
                         <h1>Design is about <br><span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in  touch!</a>
+                        <a href="" class="button">Get in  touch!</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -60,7 +60,21 @@
             <div class="section-title">About us</div>
             <div class="section-desc">Who we are?</div>
             <div class="section-body">
-                ...
+                <div class="section-aboutus">
+                    <div class="section-aboutus--left">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit laborum laboriosam 
+                        delectus distinctio quis omnis eligendi, nobis numquam. Quis omnis laborum voluptates 
+                        labore odit est facilis minima dolores, rem ducimus. Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Velit laborum laboriosam delectus distinctio omnis eligendi, nobis numquam.</p>
+                        <br>
+                        <a href="#" class="button">Learn More</a>
+                    </div>
+                    <div class="section-aboutus--right">
+                        <picture>
+                            <img src="media/foto4.jpg" alt="">
+                        </picture>                        
+                    </div>
+                </div>
             </div>            
         </section>
         <section class="default dark" id="">
