--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li class="active"><a href="">Home</a></li>
                         <li><a href="#about-us">About Us</a></li>
-                        <li><a href="">Services</a></li>
+                        <li><a href="#services">Services</a></li>
                         <li><a href="">Our Projects</a></li>
                         <li><a href="">Our Team</a></li>
                         <li><a href="">Happy Clients</a></li>
@@ -73,6 +73,34 @@
                         <picture>
                             <img src="media/foto4.jpg" alt="">
                         </picture>                        
+                    </div>
+                </div>
+            </div>            
+        </section>
+        <section class="default dark" id="services">
+            <div class="section-title">Services</div>
+            <div class="section-desc">Services that we provides</div>
+            <div class="section-body">
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="assets/images/medalha.png" alt="">
+                        <h4>Hight Quality Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur </p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/estrela.png" alt="">
+                        <h4>Modern Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/relogio.png" alt="">
+                        <h4>Regular Updates</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur </p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/images/balao.png" alt="">
+                        <h4>Fast and Free suport</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur </p>
                     </div>
                 </div>
             </div>            
