--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Awax</title>
 </head>
+
 <body>
     <header>
         <div class="header">
@@ -22,7 +24,7 @@
                         <li class="active"><a href="">Home</a></li>
                         <li><a href="#about-us">About Us</a></li>
                         <li><a href="#services">Services</a></li>
-                        <li><a href="">Our Projects</a></li>
+                        <li><a href="#projects">Our Projects</a></li>
                         <li><a href="">Our Team</a></li>
                         <li><a href="">Happy Clients</a></li>
                         <li><a href="">Price</a></li>
@@ -40,7 +42,7 @@
                     <div class="slidearea">
                         <h1>Design is about <br><span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="" class="button">Get in  touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -62,20 +64,21 @@
             <div class="section-body">
                 <div class="section-aboutus">
                     <div class="section-aboutus--left">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit laborum laboriosam 
-                        delectus distinctio quis omnis eligendi, nobis numquam. Quis omnis laborum voluptates 
-                        labore odit est facilis minima dolores, rem ducimus. Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Velit laborum laboriosam delectus distinctio omnis eligendi, nobis numquam.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit laborum laboriosam
+                            delectus distinctio quis omnis eligendi, nobis numquam. Quis omnis laborum voluptates
+                            labore odit est facilis minima dolores, rem ducimus. Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Velit laborum laboriosam delectus distinctio omnis eligendi, nobis
+                            numquam.</p>
                         <br>
                         <a href="#" class="button">Learn More</a>
                     </div>
                     <div class="section-aboutus--right">
                         <picture>
                             <img src="media/foto4.jpg" alt="">
-                        </picture>                        
+                        </picture>
                     </div>
                 </div>
-            </div>            
+            </div>
         </section>
         <section class="default dark" id="services">
             <div class="section-title">Services</div>
@@ -103,18 +106,148 @@
                         <p>Lorem ipsum dolor sit amet consectetur </p>
                     </div>
                 </div>
-            </div>            
+            </div>
+        </section>
+        <section class="default light" id="Projects">
+            <div class="section-title">Our Projects</div>
+            <div class="section-desc">What We Create</div>
+            <div class="section-body">
+                <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active">Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+                    <div class="section-projects--photos">
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto4.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto7.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto9.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <P>amet consectetur adipisicing elit</P>
+                                </div>
+                                <img src="media/foto4.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button">More Projectis</a>
+                </div>
+            </div>
         </section>
         <section class="default dark" id="">
             <div class="section-title">Título</div>
             <div class="section-desc">Descrição</div>
             <div class="section-body">
                 ...
-            </div>            
+            </div>
         </section>
     </main>
     <footer>
 
-    </footer>    
+    </footer>
 </body>
+
 </html>
