--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                         <li><a href="#about-us">About Us</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#projects">Our Projects</a></li>
-                        <li><a href="">Our Team</a></li>
+                        <li><a href="#team">Our Team</a></li>
                         <li><a href="">Happy Clients</a></li>
                         <li><a href="">Price</a></li>
                         <li><a href="">Some Facts</a></li>
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="default light" id="Projects">
+        <section class="default light" id="projects">
             <div class="section-title">Our Projects</div>
             <div class="section-desc">What We Create</div>
             <div class="section-body">
@@ -237,6 +237,80 @@
                 </div>
             </div>
         </section>
+        <section class="default dark bg-team" id="team">
+            <div class="section-team-area">
+                <div class="section-title">Our Team</div>
+                <div class="section-desc">Our Co-wokers</div>
+                <div class="section-body">
+                    <div class="section-team">
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <div class="section-team--avatar"><img src="media/mulher1.png" alt=""></div>
+                                    <div class="section-team--name">Jane Doe</div>
+                                    <div class="section-team--role">Mister mind</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <div class="section-team--avatar"><img src="media/homem1.png" alt=""></div>
+                                    <div class="section-team--name">Mike Chiller</div>
+                                    <div class="section-team--role">Creative head</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <div class="section-team--avatar"><img src="media/mulher2.png" alt=""></div>
+                                    <div class="section-team--name">Anna Johns</div>
+                                    <div class="section-team--role">Technical lead</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <div class="section-team--avatar"><img src="media/mulher1.png" alt=""></div>
+                                    <div class="section-team--name">Jane Doe</div>
+                                    <div class="section-team--role">Mister Mind</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="default dark" id="">
             <div class="section-title">Título</div>
             <div class="section-desc">Descrição</div>
