--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#projects">Our Projects</a></li>
                         <li><a href="#team">Our Team</a></li>
-                        <li><a href="">Happy Clients</a></li>
+                        <li><a href="#clients">Happy Clients</a></li>
                         <li><a href="">Price</a></li>
                         <li><a href="">Some Facts</a></li>
                         <li><a href="">Contact Us</a></li>
@@ -310,14 +310,38 @@
                 </div>
             </div>
         </section>
-
-        <section class="default dark" id="">
-            <div class="section-title">Título</div>
-            <div class="section-desc">Descrição</div>
+        <section class="default light" id="Clients">
+            <div class="section-title">Happy Clients</div>
+            <div class="section-desc">Client Reviews</div>
             <div class="section-body">
+                <div class="section-clients">
+                    <div class="sliders">
+                        <div class="slide">
+                            <div class="section-clients--avatar"><img src="media/homem2.png" alt=""></div>
+                            <div class="section-clients--name">John Doe</div>
+                            <div class="section-clients--role">Head of PR Departament</div>
+                            <div class="section-clients--quote"><img src="assets/images/quote.png" alt=""></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, neque nulla maiores
+                                aliquam atque minima dolorem doloribus ab! Iusto sed earum dolorum tempora vitae maiores
+                                quo distinctio quos? Repellendus, officia.</p>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
                 ...
             </div>
-        </section>
+
+            <section class="default dark" id="">
+                <div class="section-title">Título</div>
+                <div class="section-desc">Descrição</div>
+                <div class="section-body">
+                    ...
+                </div>
+            </section>
     </main>
     <footer>
 
