Finalização Section Clients

--- a/home.html
+++ b/home.html
@@ -310,20 +310,24 @@
                 </div>
             </div>
         </section>
-        <section class="default light" id="Clients">
+        <section class="default light no-padding" id="clients">
             <div class="section-title">Happy Clients</div>
             <div class="section-desc">Client Reviews</div>
             <div class="section-body">
                 <div class="section-clients">
                     <div class="sliders">
                         <div class="slide">
-                            <div class="section-clients--avatar"><img src="media/homem2.png" alt=""></div>
-                            <div class="section-clients--name">John Doe</div>
-                            <div class="section-clients--role">Head of PR Departament</div>
-                            <div class="section-clients--quote"><img src="assets/images/quote.png" alt=""></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, neque nulla maiores
-                                aliquam atque minima dolorem doloribus ab! Iusto sed earum dolorum tempora vitae maiores
-                                quo distinctio quos? Repellendus, officia.</p>
+                            <div class="slidearea">
+                                <div class="section-clients--avatar"><img src="media/homem2.png" alt=""></div>
+                                <div class="section-clients--name">John Doe</div>
+                                <div class="section-clients--role">Head of PR Departament</div>
+                                <div class="section-clients--quote"><img src="assets/images/quote.png" alt=""></div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, neque nulla
+                                    maiores
+                                    aliquam atque minima dolorem doloribus ab! Iusto sed earum dolorum tempora vitae
+                                    maiores
+                                    quo distinctio quos? Repellendus, officia.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="sliders-pointers">
@@ -332,16 +336,27 @@
                         <div class="pointer"></div>
                     </div>
                 </div>
+            </div>
+            <div class="section-clients--ourclients">
+                <div class="clients">
+                    <img src="media/empresa1.png" alt="">
+                    <img src="media/empresa2.png" alt="">
+                    <img src="media/empresa3.png" alt="">
+                    <img src="media/empresa4.png" alt="">
+                    <img src="media/empresa5.png" alt="">
+                    <img src="media/empresa6.png" alt="">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="default dark" id="">
+            <div class="section-title">Título</div>
+            <div class="section-desc">Descrição</div>
+            <div class="section-body">
                 ...
             </div>
-
-            <section class="default dark" id="">
-                <div class="section-title">Título</div>
-                <div class="section-desc">Descrição</div>
-                <div class="section-body">
-                    ...
-                </div>
-            </section>
+        </section>
     </main>
     <footer>
 
