--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                         <li><a href="#projects">Our Projects</a></li>
                         <li><a href="#team">Our Team</a></li>
                         <li><a href="#clients">Happy Clients</a></li>
-                        <li><a href="">Price</a></li>
+                        <li><a href="#price">Price</a></li>
                         <li><a href="">Some Facts</a></li>
                         <li><a href="">Contact Us</a></li>
                     </ul>
@@ -346,6 +346,57 @@
                     <img src="media/empresa5.png" alt="">
                     <img src="media/empresa6.png" alt="">
 
+                </div>
+            </div>
+        </section>
+        <section class="default light" id="price">
+            <div class="section-title">Price</div>
+            <div class="section-desc">Pricing Table</div>
+            <div class="section-body">
+                <div class="section-price">
+                    <div class="section-price--plans">
+                        <div class="section-price--plan">
+                            <div class="plan-name">Express</div>
+                            <div class="plan-price">$ 9.99 </div>
+                            <div class="plan-price--periodicity">/ Month</div>
+                            <div class="plan-resources">
+                                Tracking issues
+                                <div class="line"></div>
+                                Add bugs through email
+                                <div class="line"></div>
+                                Notifications
+                                <div class="line"></div>
+                                Time tracking
+                                <div class="line"></div>
+                                Custon Views
+                            </div>
+                            <a href="#" class="button">CHOOSE</a>
+                        </div>
+                        <div class="section-price--plan">
+                            ...
+                        </div>
+                        <div class="section-price--plan">
+                            ...
+                        </div>
+                        <div class="section-price--plan">
+                            ...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-price--details white">
+                <div class="section-body">
+                    <div class="section-price--detail">
+                        <div class="section-title">Premium</div>
+                        <div class="section-desc">Even More Features Available</div>
+                        ...
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                    <a href="#" class="button">Get in toutch</a>
                 </div>
             </div>
         </section>
