Criação estrutura Price Details

--- a/home.html
+++ b/home.html
@@ -370,33 +370,116 @@
                                 <div class="line"></div>
                                 Custon Views
                             </div>
-                            <a href="#" class="button">CHOOSE</a>
+                            <div>
+                                <a href="#" class="button">CHOOSE</a>
+                            </div>
                         </div>
                         <div class="section-price--plan">
-                            ...
+                            <div class="plan-name">Standart</div>
+                            <div class="plan-price">$ 14.99 </div>
+                            <div class="plan-price--periodicity">/ Month</div>
+                            <div class="plan-resources">
+                                Tracking issues
+                                <div class="line"></div>
+                                Add bugs through email
+                                <div class="line"></div>
+                                Notifications
+                                <div class="line"></div>
+                                Time tracking
+                                <div class="line"></div>
+                                Custon Views
+                            </div>
+                            <div>
+                                <a href="#" class="button">CHOOSE</a>
+                            </div>
                         </div>
                         <div class="section-price--plan">
-                            ...
+                            <div class="plan-name">Luxe</div>
+                            <div class="plan-price">$ 19.99 </div>
+                            <div class="plan-price--periodicity">/ Month</div>
+                            <div class="plan-resources">
+                                Tracking issues
+                                <div class="line"></div>
+                                Add bugs through email
+                                <div class="line"></div>
+                                Notifications
+                                <div class="line"></div>
+                                Time tracking
+                                <div class="line"></div>
+                                Custon Views
+                            </div>
+                            <div>
+                                <a href="#" class="button">CHOOSE</a>
+                            </div>
                         </div>
                         <div class="section-price--plan">
-                            ...
+                            <div class="plan-name">Premium</div>
+                            <div class="plan-price">$ 24.99 </div>
+                            <div class="plan-price--periodicity">/ Month</div>
+                            <div class="plan-resources">
+                                Tracking issues
+                                <div class="line"></div>
+                                Add bugs through email
+                                <div class="line"></div>
+                                Notifications
+                                <div class="line"></div>
+                                Time tracking
+                                <div class="line"></div>
+                                Custon Views
+                            </div>
+                            <div>
+                                <a href="#" class="button active">CHOOSE</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="section-price--details white">
+            <div class="section-price--details">
                 <div class="section-body">
-                    <div class="section-price--detail">
-                        <div class="section-title">Premium</div>
-                        <div class="section-desc">Even More Features Available</div>
-                        ...
+                    <div class="sliders">
+                        <div class="slide">
+                            <div class="slidearea">
+                                <div class="section-title">Premium</div>
+                                <div class="section-desc">Even More Features Available</div>
+                                <div class="content">
+                                    <div class="image"><img src="media/livros.png" alt=""></div>
+                                    <div class="features">
+                                        <div class="feature-title">
+                                            <img src="assets/images/check.png" alt="">First Feature
+                                        </div>
+                                        <div class="feature-desc">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur
+                                            <ul>
+                                                <li>Feature One</li>
+                                                <li>Feature Two</li>
+                                                <li>Feature Three</li>
+                                            </ul>
+                                        </div>
+                                        <div class="feature-title">
+                                            <img src="assets/images/check.png" alt="">Second Feature
+                                        </div>
+                                        <div class="feature-desc">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur                                            
+                                        </div>
+                                        <div class="feature-title">
+                                            <img src="assets/images/check.png" alt="">Third Feature
+                                        </div>
+                                        <div class="feature-desc">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="sliders-pointers">
                         <div class="pointer active"></div>
                         <div class="pointer"></div>
                         <div class="pointer"></div>
                     </div>
-                    <a href="#" class="button">Get in toutch</a>
+                    <div>
+                        <a href="#" class="button ">Get in toutch</a>
+                    </div>
                 </div>
             </div>
         </section>
