Finalização Section Price, criação estrutura Section Some Facts

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                         <li><a href="#team">Our Team</a></li>
                         <li><a href="#clients">Happy Clients</a></li>
                         <li><a href="#price">Price</a></li>
-                        <li><a href="">Some Facts</a></li>
+                        <li><a href="#some-facts">Some Facts</a></li>
                         <li><a href="">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -349,7 +349,7 @@
                 </div>
             </div>
         </section>
-        <section class="default light" id="price">
+        <section class="default light no-padding" id="price">
             <div class="section-title">Price</div>
             <div class="section-desc">Pricing Table</div>
             <div class="section-body">
@@ -448,24 +448,27 @@
                                             <img src="assets/images/check.png" alt="">First Feature
                                         </div>
                                         <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                            aspernatur
                                             <ul>
-                                                <li>Feature One</li>
-                                                <li>Feature Two</li>
-                                                <li>Feature Three</li>
+                                                <li> - Feature One</li>
+                                                <li> - Feature Two</li>
+                                                <li> - Feature Three</li>
                                             </ul>
                                         </div>
                                         <div class="feature-title">
                                             <img src="assets/images/check.png" alt="">Second Feature
                                         </div>
                                         <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur                                            
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                            aspernatur
                                         </div>
                                         <div class="feature-title">
                                             <img src="assets/images/check.png" alt="">Third Feature
                                         </div>
                                         <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis aspernatur                                            
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                            aspernatur
                                         </div>
                                     </div>
                                 </div>
@@ -483,8 +486,44 @@
                 </div>
             </div>
         </section>
+        <section class="default dark" id="some-facts">
+            <div class="section-title">Some Facts</div>
+            <div class="section-desc">About our Work</div>
+            <div class="section-body">
+                <div class="section-facts">
+                    <div class="fact">
+                        <div class="number">1000</div>
+                        <div class="title">Designe projects released</div>
+                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                    </div>
+                    <div class="fact">
+                        <div class="number">900</div>
+                        <div class="title">Photos</div>
+                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                    </div>
+                    <div class="fact">
+                        <div class="number">500</div>
+                        <div class="title">Marketing ideas</div>
+                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                    </div>
+                    <div class="fact">
+                        <div class="number">100</div>
+                        <div class="title">Exhibitions</div>
+                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                    </div>
+                </div>
+                <div class="section-tell-about-us">
+                    <div class="share"><img src="assets/images/share.png" alt="">Tell about us</div>
+                    <div class="twitter"><img src="assets/images/twitter.png" alt="152"></div>
+                    <div class="linkedin"><img src="assets/images/linkedin.png" alt="31"></div>
+                    <div class="facebook"><img src="assets/images/facebook.png" alt="165"></div>
+                    <div class="googleplus"><img src="assets/images/googleplus.png" alt="22"></div>
+                    <div class="pinterest"><img src="assets/images/pinterest.png" alt="165"></div>
+                </div>
+            </div>
+        </section>
 
-        <section class="default dark" id="">
+        <section class="default light" id="">
             <div class="section-title">Título</div>
             <div class="section-desc">Descrição</div>
             <div class="section-body">
