Finalização Section Facts, criação estrutura Section Contact Us

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                         <li><a href="#clients">Happy Clients</a></li>
                         <li><a href="#price">Price</a></li>
                         <li><a href="#some-facts">Some Facts</a></li>
-                        <li><a href="">Contact Us</a></li>
+                        <li><a href="#contact-us">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -345,7 +345,6 @@
                     <img src="media/empresa4.png" alt="">
                     <img src="media/empresa5.png" alt="">
                     <img src="media/empresa6.png" alt="">
-
                 </div>
             </div>
         </section>
@@ -486,43 +485,81 @@
                 </div>
             </div>
         </section>
-        <section class="default dark" id="some-facts">
+        <section class="default dark no-padding" id="some-facts">
             <div class="section-title">Some Facts</div>
             <div class="section-desc">About our Work</div>
             <div class="section-body">
                 <div class="section-facts">
                     <div class="fact">
                         <div class="number">1000</div>
+                        <div class="trace"></div>
                         <div class="title">Designe projects released</div>
-                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                        <div class="description">Praesent metus urna, fugiat</br> a placerat elementum at leo</div>
                     </div>
                     <div class="fact">
                         <div class="number">900</div>
+                        <div class="trace"></div>
                         <div class="title">Photos</div>
-                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                        <div class="description">Praesent metus urna, fugiat</br> a placerat elementum at leo</div>
                     </div>
                     <div class="fact">
                         <div class="number">500</div>
+                        <div class="trace"></div>
                         <div class="title">Marketing ideas</div>
-                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                        <div class="description">Praesent metus urna, fugiat</br> a placerat elementum at leo</div>
                     </div>
                     <div class="fact">
                         <div class="number">100</div>
+                        <div class="trace"></div>
                         <div class="title">Exhibitions</div>
-                        <div class="description">Lorem ipsum dolor sit amet consectetur adipisics.</div>
+                        <div class="description">Praesent metus urna, fugiat</br> a placerat elementum at leo</div>
                     </div>
                 </div>
-                <div class="section-tell-about-us">
-                    <div class="share"><img src="assets/images/share.png" alt="">Tell about us</div>
-                    <div class="twitter"><img src="assets/images/twitter.png" alt="152"></div>
-                    <div class="linkedin"><img src="assets/images/linkedin.png" alt="31"></div>
-                    <div class="facebook"><img src="assets/images/facebook.png" alt="165"></div>
-                    <div class="googleplus"><img src="assets/images/googleplus.png" alt="22"></div>
-                    <div class="pinterest"><img src="assets/images/pinterest.png" alt="165"></div>
+            </div>
+            <div class="section-tell-about-us">
+                <div class="section-body">
+                    <div class="social-media">
+                        <div class="share"><img src="assets/images/share.png" alt=""></div>
+                        <div class="desc">Tell about us:</div>
+                        <div class="twitter"><img src="assets/images/twitter.png" alt=""></div>
+                        <div class="desc">152</div>
+                        <div class="linkedin"><img src="assets/images/linkedin.png" alt=""></div>
+                        <div class="desc">31</div>
+                        <div class="facebook"><img src="assets/images/facebook.png" alt=""></div>
+                        <div class="desc">165</div>
+                        <div class="googleplus"><img src="assets/images/googleplus.png" alt=""></div>
+                        <div class="desc">22</div>
+                        <div class="pinterest"><img src="assets/images/pinterest.png" alt=""></div>
+                        <div class="desc">165</div>
+                    </div>
                 </div>
             </div>
         </section>
 
+        <section class="default light" id="contac-us">
+            <div class="section-title">Contact Us</div>
+            <div class="section-desc">Our agency located in Melbourn, Australia</div>
+            <div class="section-body">
+                <div class="section-contact-us">
+                    <div class="contact">   
+                        <form action="">                            
+                            <input type="text" name="Name" id="name">
+                            <label for="name">Name</label>
+                            <input type="email" name="Email" id="email">
+                            <label for="email">E-mail</label>
+                            <input type="text" name="Subject" id="subject">
+                            <label for="subject">Subject</label>
+                            <input type="text" name="message" id="message">
+                            <label for="message">Message</label>
+                        </form>
+                        <a href="#" class="button ">Send Message</a>
+                    </div>
+                    <div class="adress">
+
+                    </div>
+                </div>            
+            </div>
+        </section>
         <section class="default light" id="">
             <div class="section-title">Título</div>
             <div class="section-desc">Descrição</div>
