Criação estrutura do Footer

--- a/home.html
+++ b/home.html
@@ -535,7 +535,7 @@
                 </div>
             </div>
         </section>
-        <section class="default light" id="contac-us">
+        <section class="default light" id="contact-us">
             <div class="section-title">Contact Us</div>
             <div class="section-desc">Our agency located in Melbourn, Australia</div>
             <div class="section-body">
@@ -598,19 +598,41 @@
                         www.envato.com
                     </div>
                 </div>
-
-            </div>
-        </section>
-
-        <section class="default light" id="">
-            <div class="section-title">Título</div>
-            <div class="section-desc">Descrição</div>
-            <div class="section-body">
-                ...
             </div>
         </section>
     </main>
     <footer>
+        <div class="footer-body">
+            <div class="footer-iten">
+                <div class="social-medias">
+                    <div class="social-media"><a href=""><img src="assets/images/twitter.png" alt=""></a></div>
+                    <div class="social-media"><a href=""><img src="assets/images/pinterest.png" alt=""></a></div>
+                    <div class="social-media"><a href=""><img src="assets/images/linkedin.png" alt=""></a></div>
+                    <div class="social-media"><a href=""><img src="assets/images/facebook.png" alt=""></a></div>
+                    <div class="social-media"><a href=""><img src="assets/images/googleplus.png" alt=""></a></div>
+                </div>
+                <div class="awax">
+                    AWAX 2022
+                </div>
+            </div>
+            <div class="footer-iten">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, mollitia neque iure esse minima deleniti
+                ad a id nisi voluptate omnis praesentium saepe eos dolor beatae nostrum doloribus vel porro?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor necessitatibus, repudiandae id
+                perspiciatis explicabo aliquam itaque vel, officiis consectetur, tenetur optio. Natus modi est mollitia
+                a culpa in id hic.
+            </div>
+            <div class="footer-iten">
+                <div class="footer-iten--body">
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Email to subscribe">
+                        <a href="" class="button">Subscribe</a>
+                    </form>
+                </div>             
+            </div>
+
+        </div>
+
 
     </footer>
 </body>
