Finalizado estrutura básica, implementado responsividade

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
                 <div class="logoimg"></div>
             </div>
             <div class="menu">
+                <img class="menu-opener" src="assets/images/menu.png" alt="">
                 <nav>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
@@ -339,12 +340,12 @@
             </div>
             <div class="section-clients--ourclients">
                 <div class="clients">
-                    <img src="media/empresa1.png" alt="">
-                    <img src="media/empresa2.png" alt="">
-                    <img src="media/empresa3.png" alt="">
-                    <img src="media/empresa4.png" alt="">
-                    <img src="media/empresa5.png" alt="">
-                    <img src="media/empresa6.png" alt="">
+                    <div class="client"><img src="media/empresa1.png" alt=""></div>
+                    <div class="client"><img src="media/empresa2.png" alt=""></div>
+                    <div class="client"><img src="media/empresa3.png" alt=""></div>
+                    <div class="client"><img src="media/empresa4.png" alt=""></div>
+                    <div class="client"><img src="media/empresa5.png" alt=""></div>
+                    <div class="client"><img src="media/empresa6.png" alt=""></div>                    
                 </div>
             </div>
         </section>
@@ -434,54 +435,52 @@
                 </div>
             </div>
             <div class="section-price--details">
-                <div class="section-body">
-                    <div class="sliders">
-                        <div class="slide">
-                            <div class="slidearea">
-                                <div class="section-title">Premium</div>
-                                <div class="section-desc">Even More Features Available</div>
-                                <div class="content">
-                                    <div class="image"><img src="media/livros.png" alt=""></div>
-                                    <div class="features">
-                                        <div class="feature-title">
-                                            <img src="assets/images/check.png" alt="">First Feature
-                                        </div>
-                                        <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
-                                            aspernatur
-                                            <ul>
-                                                <li> - Feature One</li>
-                                                <li> - Feature Two</li>
-                                                <li> - Feature Three</li>
-                                            </ul>
-                                        </div>
-                                        <div class="feature-title">
-                                            <img src="assets/images/check.png" alt="">Second Feature
-                                        </div>
-                                        <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
-                                            aspernatur
-                                        </div>
-                                        <div class="feature-title">
-                                            <img src="assets/images/check.png" alt="">Third Feature
-                                        </div>
-                                        <div class="feature-desc">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
-                                            aspernatur
-                                        </div>
+                <div class="sliders">
+                    <div class="slide">
+                        <div class="slidearea">
+                            <div class="section-title">Premium</div>
+                            <div class="section-desc">Even More Features Available</div>
+                            <div class="content">
+                                <div class="image"><img src="media/livros.png" alt=""></div>
+                                <div class="features">
+                                    <div class="feature-title">
+                                        <img src="assets/images/check.png" alt="">First Feature
+                                    </div>
+                                    <div class="feature-desc">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                        aspernatur
+                                        <ul>
+                                            <li> - Feature One</li>
+                                            <li> - Feature Two</li>
+                                            <li> - Feature Three</li>
+                                        </ul>
+                                    </div>
+                                    <div class="feature-title">
+                                        <img src="assets/images/check.png" alt="">Second Feature
+                                    </div>
+                                    <div class="feature-desc">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                        aspernatur
+                                    </div>
+                                    <div class="feature-title">
+                                        <img src="assets/images/check.png" alt="">Third Feature
+                                    </div>
+                                    <div class="feature-desc">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis
+                                        aspernatur
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="sliders-pointers">
-                        <div class="pointer active"></div>
-                        <div class="pointer"></div>
-                        <div class="pointer"></div>
-                    </div>
-                    <div>
-                        <a href="#" class="button ">Get in toutch</a>
-                    </div>
+                </div>
+                <div class="sliders-pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+                <div>
+                    <a href="#" class="button ">Get in toutch</a>
                 </div>
             </div>
         </section>
@@ -518,9 +517,12 @@
             </div>
             <div class="section-tell-about-us">
                 <div class="section-body">
+                    <div class="title">Tell about us:</div>
                     <div class="social-media">
-                        <div class="share"><img src="assets/images/share.png" alt=""></div>
+                        <div class="title-2">
+                            <div class="share"><img src="assets/images/share.png" alt=""></div>
                         <div class="desc">Tell about us:</div>
+                        </div>                        
                         <div class="twitter"><img src="assets/images/twitter.png" alt=""></div>
                         <div class="desc">152</div>
                         <div class="linkedin"><img src="assets/images/linkedin.png" alt=""></div>
@@ -537,7 +539,7 @@
         </section>
         <section class="default light" id="contact-us">
             <div class="section-title">Contact Us</div>
-            <div class="section-desc">Our agency located in Melbourn, Australia</div>
+            <div class="section-desc">Our agency located in Melbourn</div>
             <div class="section-body">
                 <div class="section-contact-us">
                     <div class="contact">
@@ -603,32 +605,35 @@
     </main>
     <footer>
         <div class="footer-body">
-            <div class="footer-iten">
+            <div class="footer-iten social">
                 <div class="social-medias">
                     <div class="social-media"><a href=""><img src="assets/images/twitter.png" alt=""></a></div>
                     <div class="social-media"><a href=""><img src="assets/images/pinterest.png" alt=""></a></div>
                     <div class="social-media"><a href=""><img src="assets/images/linkedin.png" alt=""></a></div>
                     <div class="social-media"><a href=""><img src="assets/images/facebook.png" alt=""></a></div>
                     <div class="social-media"><a href=""><img src="assets/images/googleplus.png" alt=""></a></div>
-                </div>
+                </div>  
                 <div class="awax">
                     AWAX 2022
-                </div>
+                </div>              
             </div>
-            <div class="footer-iten">
+            <div class="footer-iten text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, mollitia neque iure esse minima deleniti
                 ad a id nisi voluptate omnis praesentium saepe eos dolor beatae nostrum doloribus vel porro?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor necessitatibus, repudiandae id
                 perspiciatis explicabo aliquam itaque vel, officiis consectetur, tenetur optio. Natus modi est mollitia
                 a culpa in id hic.
             </div>
-            <div class="footer-iten">
+            <div class="footer-iten form">
                 <div class="footer-iten--body">
                     <form action="">
                         <input type="email" name="" id="" placeholder="Email to subscribe">
                         <a href="" class="button">Subscribe</a>
                     </form>
-                </div>             
+                </div>
+            </div>
+            <div class="footer-iten awax">
+                AWAX 2022
             </div>
 
         </div>
